test/parse/expr/bad-br-name.txt
;;; ERROR: 1
(module (func (block $foo (br foo))))
(;; STDERR ;;;
parse/expr/bad-br-name.txt:2:31: unexpected token "foo"
(module (func (block $foo (br foo))))
                              ^^^
parse/expr/bad-br-name.txt:2:34: syntax error, unexpected ), expecting INT or VAR
(module (func (block $foo (br foo))))
                                 ^
;;; STDERR ;;)
